make stubs and interfaces generation
